# baiji

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.sample.json
docs/: implementation_plan.md  notes.md  react_agent_optimization.md  rust_agent_architecture.md  task_plan.md  tui-scroll-bugfix.md
src/: app.rs  config.rs  event.rs  main.rs
src/agent/: agent.rs  builtin_tools.rs  context.rs  memory.rs  mod.rs  prompt.rs  retry.rs  tool_policy.rs  trace.rs  validator.rs
src/llm/: anthropic.rs  mod.rs  provider.rs  types.rs
src/mcp/: mcporter.rs  mod.rs
src/ui/: mod.rs
