[package]
name = "baiji"
version = "0.1.0"
edition = "2024"
authors = ["catsonkeyboard <leemeany@gmail.com>"]
description = "A terminal-based AI chat client with ReAct Agent support and MCP integration"

[[bin]]
name = "baiji"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal UI
ratatui = "0.30"
crossterm = "0.29"

# HTTP and SSE
reqwest = { version = "0.13", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
dirs = "6"
async-trait = "0.1"
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
